<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ControllerListListTask" >

    <item android:id="@+id/newTask"
        android:title="@string/newTask"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_edit"/>

    <item android:id="@+id/action_shareListTask"
        android:title="@string/action_share"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_share"/>

    <item android:id="@+id/infoListTask"
        android:title="@string/info"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_info_details"/>

</menu>