<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.easytask.controller.ControllerSingInPassword"
    android:background="@drawable/fondoinicioapp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:id="@+id/singInPasswordInfo">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewInfoPass"
            android:textSize="20dp"
            android:textColor="@color/colorLetra"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:id="@+id/singInPasswordEditText"
        android:orientation="vertical"
        android:layout_below="@+id/singInPasswordInfo"
        android:layout_alignParentLeft="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textViewPass"
            android:id="@+id/textView"
            android:textColor="@color/colorLetra"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:inputType="textPassword"
            android:hint="@string/editTextPassword"
            android:maxLength="16"
            android:id="@+id/singInPassword1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:inputType="textPassword"
            android:hint="@string/editTextPassword"
            android:maxLength="16"
            android:id="@+id/singInPassword2" />
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:text="@string/buttonAceptar"
        android:id="@+id/buttonSignInPassword"
        android:textColor="@color/colorLetra"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="checkPass"
        android:background="@drawable/buttongreen"/>

</RelativeLayout>
