<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.easytask.controller.ControllerDataUserFragment"
    android:background="@drawable/fondopantalla1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/dataUserlinearLayoutNombre"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/dataUserTextViewSingInNombre"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:text="@string/editTextNombre"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/dataUserEditTextSingInNombre"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:hint="@string/editTextNombre" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutEmail"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/dataUserlinearLayoutNombre"
            android:layout_marginBottom="15dp"
            android:paddingLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dataUserTextViewSingInNick"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:text="@string/editTextNick"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/dataUserEditTextSingInNick"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:hint="@string/editTextNick" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dataUserlinearLayoutNick"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linearLayoutEmail"
            android:paddingLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dataUserTextViewSingInEmail"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:text="@string/editTextEmail"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/dataUserEditTextSingInEmail"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:hint="@string/editTextEmail"/>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
